--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -17,7 +17,7 @@ format: blog-index
 {% endcomment %}
 <div class="row t30">
 	<div class="medium-12 columns">
-		<img width="424" src="{{ site.urlimg }}/seaacc-logo.png">
+		<img width="424" src="{{ site.urlimg }}seaacc-logo.png">
 	</div>
 </div>
 <div class="row">
