--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -156,4 +156,17 @@ span.green-letter {
     font-style: normal;
 }
 /* END Condensed Light Italic */
+/* BEGIN Alice_5 */
+@font-face {
+    font-family: 'alice_5medium';
+    src: url('fonts/Alice_5/alice_5-webfont.eot');
+    src: url('fonts/Alice_5/alice_5-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/Alice_5/alice_5-webfont.woff2') format('woff2'),
+         url('fonts/Alice_5/alice_5-webfont.woff') format('woff'),
+         url('fonts/Alice_5/alice_5-webfont.ttf') format('truetype'),
+         url('fonts/Alice_5/alice_5-webfont.svg#alice_5medium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+/* END Alice_5 */
 
