--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -15,6 +15,17 @@ format: blog-index
 * First check, if widget is empty or not by checking if there is a title
 *
 {% endcomment %}
+<!-- ########## headline items ############ -->
+<div class="row t30">
+	<div class="medium-12 columns">
+    <!-- img src="{{ site.urlimg }}Thi Ca Su Viet thu phap.png" style="margin: 7px 15px 0px 0px; max-width: 50%; padding: 0px;" -->
+    <p>
+    <h2 class="font-size-h3 t10">Language Classes & Cultural Arts Workshops</h2>
+    Au Co Vietnamese Cultural Center and Southeast Asian Arts and Culture Coalitions is hosting the <em><strong>Five FREE Saturday Vietnamese language classes and South East Asian Summer Cultural Arts Workshops</strong></em> from <em><strong>July 9-August 16</strong></em>. Programs include Burmese, Cambodian, Laos, Thai, and Vietnamese. Open to the public (<a href="{{ site.baseurl }}/events/Language-Culture-Program-2016/"><em>click <u>here</u> for further details and links to download application forms</em></a>).</p>
+    <hr />
+	</div>
+</div>
+<!-- ########## end headline items ############ -->
 <div class="row t30">
 	<div class="medium-12 columns">
 		<img width="424" src="{{ site.urlimg }}seaacc-logo.png">
