Added info for 2016 12th Annual Asian Heritage Street Celebration

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -20,6 +20,9 @@ format: blog-index
 	<div class="medium-12 columns">
     <!-- img src="{{ site.urlimg }}Thi Ca Su Viet thu phap.png" style="margin: 7px 15px 0px 0px; max-width: 50%; padding: 0px;" -->
     <p>
+    <h2 class="font-size-h3 t10">12th Annual Asian Heritage Street Celebration</h2>
+    Celebrate Asian Pacific American Heritage Month at the 12th Annual Asian Heritage Street Celebration on Saturday, May 21, 2016 from 11 a.m. to 6 p.m. in front of the Asian Art Museum, leading up to the United Nation Plaza in San Francisco (<a href="{{ site.baseurl }}/events/12th-Annual-Asian-Heritage-Street-Celebration-2016/"><em>click <u>here</u> for further details</em></a>).</p>
+    <p>
     <h2 class="font-size-h3 t10">Language Classes & Cultural Arts Workshops</h2>
     Au Co Vietnamese Cultural Center and Southeast Asian Arts and Culture Coalitions is hosting the <em><strong>Five FREE Saturday Vietnamese language classes and South East Asian Summer Cultural Arts Workshops</strong></em> from <em><strong>July 9-August 16</strong></em>. Programs include Burmese, Cambodian, Laos, Thai, and Vietnamese. Open to the public (<a href="{{ site.baseurl }}/events/Language-Culture-Program-2016/"><em>click <u>here</u> for further details and links to download application forms</em></a>).</p>
     <hr />
